unpackaged/main/default/objects/Account/fields/cfg_18_Digit_ID__c.field-meta.xml
<CustomField>
        <fullName>cfg_18_Digit_ID__c</fullName>
        <description>18 digit Salesforce ID for account.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 digit Salesforce ID for account.</inlineHelpText>
        <label>18 Digit ID</label>
        <type>Text</type>
    </CustomField>