unpackaged/main/default/objects/Account/fields/cfg_Company__c.field-meta.xml
<CustomField>
        <fullName>cfg_Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>