unpackaged/main/default/objects/Account/fields/cfg_Cume_5k__c.field-meta.xml
<CustomField>
        <fullName>cfg_Cume_5k__c</fullName>
        <description>Cume 5k = Total Hard + Gift Fund Donor Amount &gt;= 5000 AND Total Hard + Gift Fund Donor Amount &lt;= 9999 AND Largest Hard or GFD &lt;= 999.</description>
        <formula>If(
            And( cfg_Total_Hard_Gift_Fund_Donor_Amount__c &gt;= 5000, cfg_Total_Hard_Gift_Fund_Donor_Amount__c &lt;= 9999,
            cfg_Largest_Hard_or_GFD__c &lt;= 999),
            "CUME5k", "No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cume 5k = Total Hard + Gift Fund Donor Amount &gt;= 5000 AND Total Hard + Gift Fund Donor Amount &lt;= 9999 AND Largest Hard or GFD &lt;= 999.</inlineHelpText>
        <label>Cume 5k</label>
        <type>Text</type>
    </CustomField>