unpackaged/main/default/objects/Account/fields/cfg_Current_Prior_FY_Difference__c.field-meta.xml
<CustomField>
        <fullName>cfg_Current_Prior_FY_Difference__c</fullName>
        <formula>cfg_Hard_GFD_Current_FY__c -  cfg_Total_Hard_GFD_Last_FY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current &amp; Prior FY Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>