unpackaged/main/default/objects/Account/fields/cfg_Do_Not_Acknowledge__c.field-meta.xml
<CustomField>
        <fullName>cfg_Do_Not_Acknowledge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Acknowledge</label>
        <type>Checkbox</type>
    </CustomField>