unpackaged/main/default/objects/Account/fields/cfg_Do_Not_Call__c.field-meta.xml
<CustomField>
        <fullName>cfg_Do_Not_Call__c</fullName>
        <description>This is a copy of the Primary Constituent's Do Not Call preference. If you want to amend it, do it on the constituent's detail page. Updating that field will update this field.</description>
        <formula>npe01__One2OneContact__r.DoNotCall</formula>
        <inlineHelpText>This is a copy of the Primary Constituent's Do Not Call preference. If you want to amend it, do it on the constituent's detail page. Updating that field will update this field.</inlineHelpText>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </CustomField>