unpackaged/main/default/objects/Account/fields/cfg_Do_Not_Merge__c.field-meta.xml
<CustomField>
        <fullName>cfg_Do_Not_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Merge</label>
        <type>Checkbox</type>
    </CustomField>