unpackaged/main/default/objects/Account/fields/cfg_Do_Not_Send_Premiums__c.field-meta.xml
<CustomField>
        <fullName>cfg_Do_Not_Send_Premiums__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Send Premiums</label>
        <type>Checkbox</type>
    </CustomField>