unpackaged/main/default/objects/Account/fields/cfg_Domain_Name__c.field-meta.xml
<CustomField>
        <fullName>cfg_Domain_Name__c</fullName>
        <label>Domain Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>EURO</fullName>
                </value>
                <value>
                    <fullName>https://www.smiletrain.org</fullName>
                </value>
                <value>
                    <fullName>Brasil</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Dubai</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>