unpackaged/main/default/objects/Account/fields/cfg_Donor_Type__c.field-meta.xml
<CustomField>
        <fullName>cfg_Donor_Type__c</fullName>
        <label>Donor Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>Non-PC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>