unpackaged/main/default/objects/Account/fields/cfg_Email_Opt_out__c.field-meta.xml
<CustomField>
        <fullName>cfg_Email_Opt_out__c</fullName>
        <description>This is a copy of the Primary Constituent's Email Opt-Out preference. If you want to amend it, do it on the constituent's detail page. Updating that field will update this field.</description>
        <formula>npe01__One2OneContact__r.HasOptedOutOfEmail</formula>
        <inlineHelpText>This is a copy of the Primary Constituent's Email Opt-Out preference. If you want to amend it, do it on the constituent's detail page. Updating that field will update this field.</inlineHelpText>
        <label>Email Opt-out</label>
        <type>Checkbox</type>
    </CustomField>