unpackaged/main/default/objects/Account/fields/cfg_First_Amount__c.field-meta.xml
<CustomField>
        <fullName>cfg_First_Amount__c</fullName>
        <label>First Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>