unpackaged/main/default/objects/Account/fields/cfg_First_Sustainer_Amount__c.field-meta.xml
<CustomField>
        <fullName>cfg_First_Sustainer_Amount__c</fullName>
        <description>First Sustainer Amount for US and UK.</description>
        <inlineHelpText>First Sustainer Amount for US and UK.</inlineHelpText>
        <label>First Sustainer Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </CustomField>