unpackaged/main/default/objects/Account/fields/cfg_First_Sustainer_Date__c.field-meta.xml
<CustomField>
        <fullName>cfg_First_Sustainer_Date__c</fullName>
        <description>First Sustainer Date for US and UK.</description>
        <inlineHelpText>First Sustainer Date for US and UK.</inlineHelpText>
        <label>First Sustainer Date</label>
        <type>Date</type>
    </CustomField>