unpackaged/main/default/objects/Account/fields/cfg_GFD_Gifts_5_Years_Ago__c.field-meta.xml
<CustomField>
        <fullName>cfg_GFD_Gifts_5_Years_Ago__c</fullName>
        <description>Rollup of Gift Fund Donor Gifts from 5 years ago.</description>
        <inlineHelpText>Rollup of Gift Fund Donor Gifts from 5 years ago.</inlineHelpText>
        <label>GFD Gifts 5 Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </CustomField>