unpackaged/main/default/objects/Account/fields/cfg_Hard_GFD_Current_FY__c.field-meta.xml
<CustomField>
        <fullName>cfg_Hard_GFD_Current_FY__c</fullName>
        <description>total amount of hard gifts and Gift Fund Donor gifts current fiscal year</description>
        <formula>cfg_Total_GFD_Current_FY__c +  cfg_Total_Gifts_Current_FY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total amount of hard gifts and Gift Fund Donor gifts current fiscal year.</inlineHelpText>
        <label>Hard + GFD Current FY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>