unpackaged/main/default/objects/Account/fields/cfg_ID_URL__c.field-meta.xml
<CustomField>
        <fullName>cfg_ID_URL__c</fullName>
        <description>Hyperlink to account record.</description>
        <formula>"https://cs198.lightning.force.com//" +  cfg_18_Digit_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hyperlink to account record.</inlineHelpText>
        <label>ID URL</label>
        <type>Text</type>
    </CustomField>