unpackaged/main/default/objects/Account/fields/cfg_Largest_999__c.field-meta.xml
<CustomField>
        <fullName>cfg_Largest_999__c</fullName>
        <description>Is Account's Largest Hard or GFD Gift less than $999?</description>
        <formula>IF ( cfg_Largest_Hard_or_GFD__c  &lt;= 999, "YES", "NO")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is Account's Largest Hard or GFD Gift less than $999?</inlineHelpText>
        <label>Largest &lt;= $999</label>
        <type>Text</type>
    </CustomField>