unpackaged/main/default/objects/Account/fields/cfg_Largest_Gift_Date__c.field-meta.xml
<CustomField>
        <fullName>cfg_Largest_Gift_Date__c</fullName>
        <label>Largest Gift Date</label>
        <type>Date</type>
    </CustomField>