unpackaged/main/default/objects/Account/fields/cfg_Largest_Gift_Fund_Donor_Amount__c.field-meta.xml
<CustomField>
        <fullName>cfg_Largest_Gift_Fund_Donor_Amount__c</fullName>
        <label>Largest Gift Fund Donor Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>