unpackaged/main/default/objects/Account/fields/cfg_Largest_Hard_Gift_US__c.field-meta.xml
<CustomField>
        <fullName>cfg_Largest_Hard_Gift_US__c</fullName>
        <label>Largest Hard Gift (US)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>