unpackaged/main/default/objects/Account/fields/cfg_Largest_Hard_or_GFD__c.field-meta.xml
<CustomField>
        <fullName>cfg_Largest_Hard_or_GFD__c</fullName>
        <description>Determines which is larger between " Largest Amount" and "Largest Gift Fund Donor Amount". Used for PC Levels.</description>
        <formula>IF (  cfg_Largest_Gift_Fund_Donor_Amount__c  &gt;  cfg_Largest_Hard_Gift_US__c  ,  cfg_Largest_Gift_Fund_Donor_Amount__c , cfg_Largest_Hard_Gift_US__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines which is larger between " Largest Amount" and "Largest Gift Fund Donor Amount". Used for PC Levels.</inlineHelpText>
        <label>Largest Hard or GFD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>