unpackaged/main/default/objects/Account/fields/cfg_Last_Gift_Date_Hard_GFD__c.field-meta.xml
<CustomField>
        <fullName>cfg_Last_Gift_Date_Hard_GFD__c</fullName>
        <formula>IF(
            AND(
            ISBLANK( cfg_Last_Gift_Fund_Donor_Date__c ),
            ISBLANK(npo02__LastCloseDate__c)
            ),
            NULL,
            DATE(1900, 01, 01) +
            MAX(
            BLANKVALUE(
            cfg_Last_Gift_Fund_Donor_Date__c ,
            DATE(1900, 01, 01)
            ) - DATE(1900, 01, 01),
            BLANKVALUE(
            npo02__LastCloseDate__c ,
            DATE(1900, 01, 01)
            ) - DATE(1900, 01, 01)
            )
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Gift Date (Hard/GFD)</label>
        <type>Date</type>
    </CustomField>