unpackaged/main/default/objects/Account/fields/cfg_Last_Gift_Fund_Donor_Date__c.field-meta.xml
<CustomField>
        <fullName>cfg_Last_Gift_Fund_Donor_Date__c</fullName>
        <label>Last Gift Fund Donor Date</label>
        <type>Date</type>
    </CustomField>