unpackaged/main/default/objects/Account/fields/cfg_Last_Hard_Gift_Fund_Date__c.field-meta.xml
<CustomField>
        <fullName>cfg_Last_Hard_Gift_Fund_Date__c</fullName>
        <formula>IF(
            AND(
            ISBLANK(npo02__LastCloseDate__c),
            ISBLANK(npe01__One2OneContact__r.npsp__Last_Soft_Credit_Date__c)
            ),
            NULL,
            DATE(1900, 01, 01) +
            MAX(
            BLANKVALUE(
            npo02__LastCloseDate__c,
            DATE(1900, 01, 01)
            ) - DATE(1900, 01, 01),
            BLANKVALUE(
            npe01__One2OneContact__r.npsp__Last_Soft_Credit_Date__c,
            DATE(1900, 01, 01)
            ) - DATE(1900, 01, 01)
            )
            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Hard + Gift Fund Date</label>
        <type>Date</type>
    </CustomField>