unpackaged/main/default/objects/Account/fields/cfg_Last_Program_Code__c.field-meta.xml
<CustomField>
        <fullName>cfg_Last_Program_Code__c</fullName>
        <label>Last Program Code</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>