unpackaged/main/default/objects/Account/fields/cfg_Last_Sustainer_Amount__c.field-meta.xml
<CustomField>
        <fullName>cfg_Last_Sustainer_Amount__c</fullName>
        <description>Last Sustainer Amount for US and UK.</description>
        <inlineHelpText>Last Sustainer Amount for US and UK.</inlineHelpText>
        <label>Last Sustainer Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </CustomField>