unpackaged/main/default/objects/Account/fields/cfg_Last_Sustainer_Date__c.field-meta.xml
<CustomField>
        <fullName>cfg_Last_Sustainer_Date__c</fullName>
        <description>Last Sustainer Date for US and UK.</description>
        <inlineHelpText>Last Sustainer Date for US and UK.</inlineHelpText>
        <label>Last Sustainer Date</label>
        <type>Date</type>
    </CustomField>