unpackaged/main/default/objects/Account/fields/cfg_Last_Sustainer_Date_Revised__c.field-meta.xml
<CustomField>
        <fullName>cfg_Last_Sustainer_Date_Revised__c</fullName>
        <description>Revised Last Sustainer Date for US and UK.</description>
        <inlineHelpText>Revised Last Sustainer Date for US and UK.</inlineHelpText>
        <label>Last Sustainer Date Revised</label>
        <type>Date</type>
    </CustomField>