unpackaged/main/default/objects/Account/fields/cfg_Limited_Mail__c.field-meta.xml
<CustomField>
        <fullName>cfg_Limited_Mail__c</fullName>
        <label>Limited Mail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 mailing per year</fullName>
                </value>
                <value>
                    <fullName>2 mailings per year</fullName>
                </value>
                <value>
                    <fullName>4 mailings per year</fullName>
                </value>
                <value>
                    <fullName>8 mailings per year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>