unpackaged/main/default/objects/Account/fields/cfg_Mail_Opt_Out__c.field-meta.xml
<CustomField>
        <fullName>cfg_Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Opt-Out</label>
        <type>Checkbox</type>
    </CustomField>