unpackaged/main/default/objects/Account/fields/cfg_No_Child_of_the_Month__c.field-meta.xml
<CustomField>
        <fullName>cfg_No_Child_of_the_Month__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Child of the Month</label>
        <type>Checkbox</type>
    </CustomField>