unpackaged/main/default/objects/Account/fields/cfg_Number_of_Sustainer_Gifts__c.field-meta.xml
<CustomField>
        <fullName>cfg_Number_of_Sustainer_Gifts__c</fullName>
        <description>Number of Sustainer Gifts for US and UK.</description>
        <inlineHelpText>Number of Sustainer Gifts for US and UK.</inlineHelpText>
        <label>Number of Sustainer Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>