unpackaged/main/default/objects/Account/fields/cfg_PC_Cumulative__c.field-meta.xml
<CustomField>
        <fullName>cfg_PC_Cumulative__c</fullName>
        <description>Premier Circle cumulative status.</description>
        <formula>If (AND (npo02__TotalOppAmount__c &gt;= 50000 , npo02__LargestAmount__c &lt;= 25000), 'WP',

            If (AND (AND (npo02__TotalOppAmount__c &gt;= 25000, npo02__TotalOppAmount__c &lt;=49999) , npo02__LargestAmount__c  &lt;=  10000), 'W1',

            If (AND (AND (npo02__TotalOppAmount__c &gt;= 10000, npo02__TotalOppAmount__c &lt;= 24999) , npo02__LargestAmount__c  &lt;=  5000), 'W2',

            If (AND (AND (npo02__TotalOppAmount__c &gt;= 5000, npo02__TotalOppAmount__c &lt;= 9999) , npo02__LargestAmount__c  &lt;=  1000), 'W3',

            NULL
            ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Premier Circle cumulative status.</inlineHelpText>
        <label>PC Cumulative</label>
        <type>Text</type>
    </CustomField>