unpackaged/main/default/objects/Account/fields/cfg_PC_Final_Sent_Date__c.field-meta.xml
<CustomField>
        <fullName>cfg_PC_Final_Sent_Date__c</fullName>
        <label>PC Final Sent Date</label>
        <type>Date</type>
    </CustomField>