unpackaged/main/default/objects/Account/fields/cfg_PC_Single__c.field-meta.xml
<CustomField>
        <fullName>cfg_PC_Single__c</fullName>
        <formula>IF(npo02__LargestAmount__c &gt;= 25000,'WP',

            IF( AND(npo02__LargestAmount__c &gt;=  10000, npo02__LargestAmount__c &lt;=24999), 'W1',

            IF( AND(npo02__LargestAmount__c &gt;= 5000, npo02__LargestAmount__c &lt;= 9999), 'W2',

            IF( AND(npo02__LargestAmount__c &gt;= 1000, npo02__LargestAmount__c &lt;= 4999) , 'W3',

            NULL) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC Single</label>
        <type>Text</type>
    </CustomField>