unpackaged/main/default/objects/Account/fields/cfg_PC_Single_Data__c.field-meta.xml
<CustomField>
        <fullName>cfg_PC_Single_Data__c</fullName>
        <label>PC Single Data</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>