unpackaged/main/default/objects/Account/fields/cfg_Premier_Circle_Level__c.field-meta.xml
<CustomField>
        <fullName>cfg_Premier_Circle_Level__c</fullName>
        <description>US-only. Premier Circle designation</description>
        <formula>IF(
            AND(RecordType.Name = 'Household Account', cfg_PC_Cumulative__c = "") ,  cfg_PC_Single_Data__c , cfg_PC_Cumulative__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>US-only. Premier Circle designation.</inlineHelpText>
        <label>Premier Circle Level</label>
        <type>Text</type>
    </CustomField>