unpackaged/main/default/objects/Account/fields/cfg_Primary_Contact_Email__c.field-meta.xml
<CustomField>
        <fullName>cfg_Primary_Contact_Email__c</fullName>
        <description>Email from Primary Contact record.</description>
        <formula>npe01__One2OneContact__r.Email</formula>
        <inlineHelpText>Email from Primary Contact record.</inlineHelpText>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </CustomField>