unpackaged/main/default/objects/Account/fields/cfg_Primary_Contact_ID__c.field-meta.xml
<CustomField>
        <fullName>cfg_Primary_Contact_ID__c</fullName>
        <description>18 digit ID for Primary Contact record.</description>
        <formula>npe01__One2OneContact__r.cfg_18_Digit_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>18 digit ID for Primary Contact record.</inlineHelpText>
        <label>Primary Contact ID</label>
        <type>Text</type>
    </CustomField>