unpackaged/main/default/objects/Account/fields/cfg_Primary_Deceased__c.field-meta.xml
<CustomField>
        <fullName>cfg_Primary_Deceased__c</fullName>
        <description>Is Primary Contact deceased?</description>
        <formula>npe01__One2OneContact__r.npsp__Deceased__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is Primary Contact deceased?</inlineHelpText>
        <label>Primary Deceased?</label>
        <type>Checkbox</type>
    </CustomField>