unpackaged/main/default/objects/Account/fields/cfg_Primary_First_Name__c.field-meta.xml
<CustomField>
        <fullName>cfg_Primary_First_Name__c</fullName>
        <description>First name of Primary Contact.</description>
        <formula>npe01__One2OneContact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First name of Primary Contact.</inlineHelpText>
        <label>Primary First Name</label>
        <type>Text</type>
    </CustomField>