unpackaged/main/default/objects/Account/fields/cfg_Primary_Last_Name__c.field-meta.xml
<CustomField>
        <fullName>cfg_Primary_Last_Name__c</fullName>
        <description>Last name of Primary Contact.</description>
        <formula>npe01__One2OneContact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Last name of Primary Contact.</inlineHelpText>
        <label>Primary Last Name</label>
        <type>Text</type>
    </CustomField>