unpackaged/main/default/objects/Account/fields/cfg_SC_Total__c.field-meta.xml
<CustomField>
        <fullName>cfg_SC_Total__c</fullName>
        <label>SC Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>