unpackaged/main/default/objects/Account/fields/cfg_Smallest_Gift_Date__c.field-meta.xml
<CustomField>
        <fullName>cfg_Smallest_Gift_Date__c</fullName>
        <label>Smallest Gift Date</label>
        <type>Date</type>
    </CustomField>