unpackaged/main/default/objects/Account/fields/cfg_This_FY_and_Last_FY_Difference__c.field-meta.xml
<CustomField>
        <fullName>cfg_This_FY_and_Last_FY_Difference__c</fullName>
        <description>Total Gifts This FISCAL Year minus Total Gifts Last FISCAL Year.</description>
        <formula>npo02__OppAmountThisYear__c  -  npo02__OppAmountLastYear__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Gifts This FISCAL Year minus Total Gifts Last FISCAL Year.</inlineHelpText>
        <label>This FY and Last FY Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>