unpackaged/main/default/objects/Account/fields/cfg_Total_Amount_Fundraiser_Role__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_Amount_Fundraiser_Role__c</fullName>
        <label>Total Amount Fundraiser Role</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>