unpackaged/main/default/objects/Account/fields/cfg_Total_GFD__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_GFD__c</fullName>
        <description>Count of GFD role gifts.</description>
        <inlineHelpText>Count of GFD role gifts.</inlineHelpText>
        <label>Total # GFD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>