unpackaged/main/default/objects/Account/fields/cfg_Total_GFD_Current_FY__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_GFD_Current_FY__c</fullName>
        <label>Total GFD Current FY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>