unpackaged/main/default/objects/Account/fields/cfg_Total_GFD_Hard_2_FY_Ago__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_GFD_Hard_2_FY_Ago__c</fullName>
        <formula>cfg_Total_GFD_FY18__c +  npo02__OppAmount2YearsAgo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total GFD + Hard 2 FY Ago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>