unpackaged/main/default/objects/Account/fields/cfg_Total_Gift_Fund_Donor__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_Gift_Fund_Donor__c</fullName>
        <label>Total Gift Fund Donor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>