unpackaged/main/default/objects/Account/fields/cfg_Total_Gifts_Hard__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_Gifts_Hard__c</fullName>
        <description>Total amount of all hard-credited gifts.</description>
        <inlineHelpText>Total amount of all hard-credited gifts.</inlineHelpText>
        <label>Total Gifts (Hard)</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </CustomField>