unpackaged/main/default/objects/Account/fields/cfg_Total_Gifts_Last_FY__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_Gifts_Last_FY__c</fullName>
        <label>Total Gifts Last FY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>