unpackaged/main/default/objects/Account/fields/cfg_Total_Hard_Fundraised__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_Hard_Fundraised__c</fullName>
        <description>Sum of Hard Gifts and Gift Fund Donor role and Fundraiser role.</description>
        <formula>cfg_Total_Amount_Fundraiser_Role__c + cfg_Total_Gifts_Hard__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Hard Gifts and Gift Fund Donor role and Fundraiser role.</inlineHelpText>
        <label>Total Hard + Fundraised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>