unpackaged/main/default/objects/Account/fields/cfg_Total_Hard_GFD_Last_FY__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_Hard_GFD_Last_FY__c</fullName>
        <description>Total Hard gifts + Gift Fund Donor from last fiscal year</description>
        <formula>cfg_Total_GFD_Last_FY__c  +   cfg_Total_Gifts_Last_FY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Hard gifts + Gift Fund Donor from last fiscal year</inlineHelpText>
        <label>Total Hard + GFD Last FY</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>