unpackaged/main/default/objects/Account/fields/cfg_Total_Hard_Gift_Fund_Donor_Amount__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_Hard_Gift_Fund_Donor_Amount__c</fullName>
        <formula>cfg_Total_Gift_Fund_Donor__c  +  cfg_Total_Hard_Gifts_US__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hard + Gift Fund Donor Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>