unpackaged/main/default/objects/Account/fields/cfg_Total_Hard_Gift_Fund_Donor_DONT_USE__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_Hard_Gift_Fund_Donor_DONT_USE__c</fullName>
        <description>Sum of all hard credit gifts AND gifts where the donor has a 'Gift Fund Donor' role.</description>
        <inlineHelpText>Sum of all hard credit gifts AND gifts where the donor has a 'Gift Fund Donor' role.</inlineHelpText>
        <label>Total Hard + Gift Fund Donor DONT USE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>