unpackaged/main/default/objects/Account/fields/cfg_Total_Hard_Gifts_5_Years_Ago__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_Hard_Gifts_5_Years_Ago__c</fullName>
        <description>Rollup of total hard gifts from 5 years ago.</description>
        <inlineHelpText>Rollup of total hard gifts from 5 years ago.</inlineHelpText>
        <label>Total Hard Gifts 5 Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </CustomField>