unpackaged/main/default/objects/Account/fields/cfg_Total_Hard_Gifts_US__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_Hard_Gifts_US__c</fullName>
        <label>Total Hard Gifts (US)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>