unpackaged/main/default/objects/Account/fields/cfg_Total_Number_Gifts_Hard_GFD__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_Number_Gifts_Hard_GFD__c</fullName>
        <description>Total number of Hard gifts plus Gift Fund Donor gifts.</description>
        <formula>cfg_Total_GFD__c + npo02__NumberOfClosedOpps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total number of Hard gifts plus Gift Fund Donor gifts.</inlineHelpText>
        <label>Total Number Gifts (Hard + GFD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>