unpackaged/main/default/objects/Account/fields/cfg_Total_Number_Gifts_Last_FY__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_Number_Gifts_Last_FY__c</fullName>
        <label>Total Number Gifts Last FY</label>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>lessThan</operation>
            <value>7/1/2019</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>greaterThan</operation>
            <value>6/30/2018</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </CustomField>