unpackaged/main/default/objects/Account/fields/cfg_Total_Paid_to_Planned_G__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_Paid_to_Planned_G__c</fullName>
        <label>Total Paid to Planned G</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>