unpackaged/main/default/objects/Account/fields/cfg_Total_to_Corporate_Channel__c.field-meta.xml
<CustomField>
        <fullName>cfg_Total_to_Corporate_Channel__c</fullName>
        <label>Total to Corporate Channel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>