unpackaged/main/default/objects/Account/fields/cfg_Undeliverable__c.field-meta.xml
<CustomField>
        <fullName>cfg_Undeliverable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Undeliverable</label>
        <type>Checkbox</type>
    </CustomField>